@@ -2922,6 +2922,7 @@ int parseLine(char *line, s_fidoconfig *config)
      else if (strcmp(iToken, "keeptrsmail")==0) rc = parseBool(getRestOfLine(), &(config->keepTrsMail));
      else if (strcmp(iToken, "filelist")==0) rc = parseFilelist(getRestOfLine(), config);
      else if (strcmp(iToken, "createfwdnonpass")==0) rc = parseBool(getRestOfLine(), &(config->createFwdNonPass));
+	 else if (strcmp(iToken, "autopassive")==0) rc = parseBool(getRestOfLine(), &(config->autoPassive));
 
 #ifdef __TURBOC__
      else unrecognised++;
