@@ -1,5 +1,10 @@
 
 ----- cvs ci ------
+Sat Jan 20 21:56:54 NOVT 2001
+max:
++ autopassive token
+
+----- cvs ci ------
 Mon Jan 15 14:19:26 NOVT 2001
 max:
 + linkmsgbasedir token
